--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: '3.8'
 
 services:
   web:
-    build: ./app
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - ./app/:/usr/src/app/
-    ports:
-      - 8000:8000
-    env_file:
-      - ./.env.dev
-    depends_on:
-      - db
+  build:
+    context: ./app
+    dockerfile: Dockerfile.prod
+  command: gunicorn intradi.wsgi:application --bind 0.0.0.0:8000
+  ports:
+    - 8000:8000
+  env_file:
+    - ./.env.prod
+  depends_on:
+    - db
   db:
     image: postgres:13.0-alpine
     volumes:
